[gd_scene load_steps=2 format=3 uid="uid://clnjrk1lfkdnk"]

[ext_resource type="Script" path="res://main.gd" id="1_6enfc"]

[node name="main" type="Node2D"]
script = ExtResource("1_6enfc")

[node name="WalletTimers" type="Label" parent="."]
unique_name_in_owner = true
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 1024.0
offset_right = 1025.0
offset_bottom = 23.0
grow_horizontal = 0
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="WalletDetails" type="RichTextLabel" parent="."]
unique_name_in_owner = true
offset_left = 52.0
offset_top = 367.0
offset_right = 1128.0
offset_bottom = 480.0
focus_mode = 2
selection_enabled = true

[node name="SetWalletForm" type="Node2D" parent="."]

[node name="MnemonicPhrase" type="Node2D" parent="SetWalletForm"]

[node name="PhraseInput" type="TextEdit" parent="SetWalletForm/MnemonicPhrase"]
unique_name_in_owner = true
offset_left = 49.0
offset_top = 33.0
offset_right = 819.0
offset_bottom = 302.0

[node name="Label" type="Label" parent="SetWalletForm/MnemonicPhrase"]
offset_left = 50.0
offset_top = 5.0
offset_right = 260.0
offset_bottom = 31.0
text = "Wallet mnemonic phrase:"

[node name="SetButton" type="Button" parent="SetWalletForm"]
offset_left = 47.0
offset_top = 311.0
offset_right = 247.0
offset_bottom = 353.0
text = "Set wallet"

[node name="SendAdaForm" type="Node2D" parent="."]

[node name="SendAdaButton" type="Button" parent="SendAdaForm"]
unique_name_in_owner = true
offset_left = 47.0
offset_top = 579.0
offset_right = 247.0
offset_bottom = 621.0
disabled = true
text = "Send ADA
"

[node name="Recipient" type="Node2D" parent="SendAdaForm"]

[node name="Label" type="Label" parent="SendAdaForm/Recipient"]
offset_left = 60.0
offset_top = 499.0
offset_right = 166.0
offset_bottom = 527.0
text = "Recipient:"

[node name="AddressInput" type="LineEdit" parent="SendAdaForm/Recipient"]
unique_name_in_owner = true
offset_left = 149.0
offset_top = 496.0
offset_right = 790.0
offset_bottom = 530.0

[node name="Amount" type="Node2D" parent="SendAdaForm"]

[node name="Label" type="Label" parent="SendAdaForm/Amount"]
offset_left = 69.0
offset_top = 534.0
offset_right = 136.0
offset_bottom = 560.0
text = "Amount:"

[node name="AmountInput" type="LineEdit" parent="SendAdaForm/Amount"]
unique_name_in_owner = true
offset_left = 150.0
offset_top = 535.0
offset_right = 380.0
offset_bottom = 569.0
text = "5000000"

[connection signal="pressed" from="SetWalletForm/SetButton" to="." method="_on_set_wallet_button_pressed"]
[connection signal="pressed" from="SendAdaForm/SendAdaButton" to="." method="_on_send_ada_button_pressed"]
